deployment-analysis-bot-backup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"analysis-bot","namespace":"evil2root-trading"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"trading-bot","component":"analysis-bot"}},"template":{"metadata":{"labels":{"app":"trading-bot","component":"analysis-bot"}},"spec":{"containers":[{"env":[{"name":"APP_MODE","value":"analysis"},{"name":"REDIS_HOST","value":"redis"},{"name":"POSTGRES_HOST","value":"postgres"},{"name":"LOG_LEVEL","value":"info"} [...]
  creationTimestamp: "2025-03-19T06:43:10Z"
  generation: 3
  name: analysis-bot
  namespace: evil2root-trading
  resourceVersion: "92200"
  uid: 390d6d0b-9f7f-4196-90a3-aa895d9acbb0
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: trading-bot
      component: analysis-bot
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: trading-bot
        component: analysis-bot
    spec:
      containers:
      - env:
        - name: APP_MODE
          value: analysis
        - name: REDIS_HOST
          value: redis
        - name: POSTGRES_HOST
          value: postgres
        - name: LOG_LEVEL
          value: info
        image: registry.digitalocean.com/evil2root-registry/evil2root-ai:latest
        imagePullPolicy: Always
        name: analysis-bot
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: registry-evil2root-registry
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2025-03-19T06:47:22Z"
    lastUpdateTime: "2025-03-19T06:47:22Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2025-03-19T06:43:10Z"
    lastUpdateTime: "2025-03-19T11:28:23Z"
    message: ReplicaSet "analysis-bot-5c6bb7cfb5" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 3
  replicas: 3
  unavailableReplicas: 3
  updatedReplicas: 1
