adminer-ingress-ip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer-ingress-ip
  namespace: evil2root-trading
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /adminer/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: adminer
            port:
              number: 8080
